# python-playwright

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  conftest.py  pyproject.toml  pytest.ini
.claude/: settings.json
.github/workflows/: claude.yml
models/: user.py
pages/: BasePage.py  DashboardPage.py  HeaderSection.py  LoginPage.py  RegisterPage.py  base_page.py  dashboard.py  header.py  login.py  registration.py
tests/: conftest.py  test_smoke.py
