[project]
name = "python-playwright"
version = "0.1.0"
description = "Playwright fun"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.14.3",
    "pylint>=3.3.7",
    "pytest==8.4.1",
    "pytest-playwright==0.7.0",
    "pytest-xdist>=3.8.0",
    "testcontainers==4.10.0",
]
