[project]
name = "python-playwright"
version = "0.1.0"
description = "Playwright fun"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.14.3",
    "pytest==8.4.1",
    "pytest-playwright==0.7.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.5",
    "testcontainers==4.10.0",
]

[tool.pytest.ini_options]
addopts = [
    "--alluredir", "allure-results",
    "--clean-alluredir",
    "--screenshot", "only-on-failure",
    "--video", "retain-on-failure",
    "--browser", "webkit",
    "--browser", "chromium",
    "--browser", "firefox"
]

[tool.ruff.lint]
select = ["E", "W", "F", "N", "PL", "B", "A", "RUF", "ERA"]